<resources>
    <string name="app_name">ForCars</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tv_filter">Filtra el coche que quieras</string>
    <string name="content_description">Content description</string>
    <string name="precio_contado">Precio al contado</string>
    <string name="precio_ejemplo">20.000€</string>
    <string name="modelo_ejemplo">Alfa Romeo Giulia Veloce 2.2 JTDM 210CV</string>
    <string name="detalles_ejemplo">Barcelona | Diesel | 2022 | 60.000 km</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="hola">Hola,</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="garantia">Garantía oficial pagada por ForCars\n1 año</string>
    <string name="chat">Chat</string>
    <string name="llamar">Llamar</string>
    <string name="contactar">Para ponerte en contacto con el dueño del vehículo\nProporciona tu correo y se lo haremos llegar.</string>
    <string name="enviarmail">Enviar</string>
    <string name="ejemplodemail">Correo electrónico</string>
    <string name="invalid_email">Correo inválido</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="modificar_foto">Modificar foto</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="subir_imagen">Subir</string>
    <string name="borrar_imagen">Borrar</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="kilometros">Kilómetros</string>
    <string name="combustible">Combustible</string>
    <string name="cv">Cv</string>
    <string name="cambio">Cambio</string>
    <string name="motor">Motor</string>
    <string name="añadir_anuncio">Añadir Anuncio</string>
    <string name="borrar_campos">Borrar Campos</string>
    <string name="contraseña">Contraseña</string>
    <string name="telefono_contacto">Telefono de contacto</string>
    <string name="ubicacion">Ubicación</string>
</resources>