<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivCar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/content_description"
        android:scaleType="centerCrop"
        android:src="@drawable/alafaromeo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ivPrecioContado"
        style="@style/TextDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default_16dp"
        android:layout_marginTop="@dimen/margin_default_16dp"
        android:layout_marginEnd="@dimen/margin_default_16dp"
        android:text="@string/precio_contado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivCar" />

    <TextView
        android:id="@+id/ivPrecio"
        style="@style/TextPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default_16dp"
        android:layout_marginEnd="@dimen/margin_default_16dp"
        android:layout_marginBottom="@dimen/margin_default_16dp"
        android:text="@string/precio_ejemplo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPrecioContado" />

    <TextView
        android:id="@+id/ivModelo"
        style="@style/TextBlackDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default_16dp"
        android:layout_marginEnd="@dimen/margin_default_16dp"
        android:text="@string/modelo_ejemplo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPrecio" />

    <TextView
        android:id="@+id/ivDetalles"
        style="@style/TextDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default_16dp"
        android:layout_marginEnd="@dimen/margin_default_16dp"
        android:layout_marginBottom="@dimen/margin_default_16dp"
        android:text="@string/detalles_ejemplo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivModelo" />


</androidx.constraintlayout.widget.ConstraintLayout>