<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_default_16dp">

        <ImageView
            android:id="@+id/imgCar"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/galleria"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSubir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default_16dp"
            android:drawableLeft="@drawable/upload"
            android:text="@string/subir_imagen"
            app:layout_constraintEnd_toStartOf="@id/btnBorrar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgCar"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default_16dp"
            android:backgroundTint="@color/md_theme_light_error"
            android:drawableLeft="@drawable/ic_delete"
            android:text="@string/borrar_imagen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnSubir"
            app:layout_constraintTop_toBottomOf="@id/imgCar"
            tools:ignore="RtlHardcoded" />

        <Spinner
            android:id="@+id/spMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default_16dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSubir" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etModelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default_16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/modelo"
            android:minHeight="48dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spMarca" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCombustible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default_16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/combustible"
            android:minHeight="48dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etModelo" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etKilometros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default_16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/kilometros"
            android:minHeight="48dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etCombustible" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default_16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/cv"
            android:inputType="number"
            android:minHeight="48dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etKilometros" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default_16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/precio_ejemplo"
            android:inputType="number"
            android:minHeight="48dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etCv" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCambio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default_16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/cambio"
            android:minHeight="48dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPrecio" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMotor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default_16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/motor"
            android:minHeight="48dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etCambio" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default_16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/telefono_contacto"
            android:inputType="number"
            android:minHeight="48dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etMotor" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUbicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default_16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/ubicacion"
            android:minHeight="48dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etTelefono" />

        <NumberPicker
            android:id="@+id/npYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etUbicacion" />

        <Button
            android:id="@+id/btnSubirAnuncio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default_16dp"
            android:layout_marginEnd="@dimen/margin_default_16dp"
            android:drawableLeft="@drawable/baseline_playlist_add_24"
            android:text="@string/añadir_anuncio"
            app:layout_constraintEnd_toStartOf="@id/btnReset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/npYear"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default_16dp"
            android:backgroundTint="@color/md_theme_light_error"
            android:drawableLeft="@drawable/restore"
            android:text="@string/borrar_campos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnSubirAnuncio"
            app:layout_constraintTop_toBottomOf="@id/npYear"
            tools:ignore="RtlHardcoded" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>