<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_default_16dp"
    tools:context=".ui.notifications.NotificationsFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

    <TextView
        android:id="@+id/tvModificarFoto"
        style="@style/TextBlackPreset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/modificar_foto"
        app:layout_constraintEnd_toEndOf="@id/ivProfile"
        app:layout_constraintStart_toStartOf="@id/ivProfile"
        app:layout_constraintTop_toBottomOf="@id/ivProfile" />

    <TextView
        android:id="@+id/tvUserName"
        style="@style/TextLabelMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default_16dp"
        android:text="@string/nombre_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvModificarFoto" />

    <TextView
        android:id="@+id/tvUserNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUserName"
        tools:text="pabloarques" />

    <TextView
        android:id="@+id/tvEmail"
        style="@style/TextLabelMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default_16dp"
        android:text="@string/correo_electronico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUserNameText" />


    <TextView
        android:id="@+id/tvEmailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        tools:text="pabloarques@gmail.com" />

    <Button
        android:id="@+id/btnChat"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margin_default_16dp"
        android:backgroundTint="@color/md_theme_light_error"
        android:drawableLeft="@drawable/baseline_logout_24"
        android:text="@string/cerrar_sesion"
        android:textColor="@color/md_theme_light_onPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmailText"
        tools:ignore="RtlHardcoded" />
</androidx.constraintlayout.widget.ConstraintLayout>