<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_light_onSecondary">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_description"
            android:padding="@dimen/margin_default_16dp"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_back" />


        <ImageView
            android:id="@+id/ivPhotoCar"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/alafaromeo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <TextView
            android:id="@+id/tvNameCar"
            style="@style/TextBlackDefaultDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_default_16dp"
            android:paddingTop="@dimen/padding_default_16dp"
            android:paddingEnd="@dimen/padding_default_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivPhotoCar"
            tools:text="@string/modelo_ejemplo" />

        <TextView
            android:id="@+id/tvPrecioCont"
            style="@style/TextPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default_16dp"
            android:layout_marginEnd="@dimen/margin_default_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNameCar"
            tools:text="@string/precio_ejemplo" />

        <TextView
            android:id="@+id/tvGarantia"
            style="@style/TextDefaultDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default_16dp"
            android:layout_marginEnd="@dimen/margin_default_16dp"
            android:text="@string/garantia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPrecioCont" />

        <FrameLayout
            android:id="@+id/llDetailCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGarantia">

            <include
                android:id="@+id/detail_car"
                layout="@layout/detail_car" />

        </FrameLayout>

        <Button
            android:id="@+id/btnLlamar"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/margin_default_16dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/md_theme_light_tertiaryContainer"
            android:drawableLeft="@drawable/phone"
            android:drawableTint="@color/md_theme_light_onTertiaryContainer"
            android:text="@string/llamar"
            android:textColor="@color/md_theme_light_onTertiaryContainer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnChat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llDetailCar"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btnChat"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/margin_default_16dp"
            android:backgroundTint="@color/md_theme_light_tertiaryContainer"
            android:drawableLeft="@drawable/baseline_chat_24"
            android:drawableTint="@color/md_theme_light_onTertiaryContainer"
            android:text="@string/chat"
            android:textColor="@color/md_theme_light_onTertiaryContainer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnLlamar"
            app:layout_constraintTop_toBottomOf="@id/llDetailCar"
            tools:ignore="RtlHardcoded" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>